--- a/index.html
+++ b/index.html
@@ -24,12 +24,8 @@
 
 		<div class="swiper-wrapper">
 			<div class="swiper-slide slide1">
-				<div class="p1-bg ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.8s"></div>
-				<img src="images/page1-words.png" alt="素影、繁花" class="p1-word ani" swiper-animate-effect="zoomIn" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
-				<div class="u-arrow-bottom">
-					<img src="images/arrow.png">
-				</div>
 			</div>
+
 			<div class="swiper-slide slide2">
 				<div class="slide2-wrap ani" swiper-animate-effect="fadeIn" swiper-animate-duration="2s" swiper-animate-delay="0.3s">
 					<div class="bg1">
@@ -47,14 +43,8 @@
 					<img src="images/arrow.png">
 				</div>
 			</div>
+
 			<div class="swiper-slide slide3">
-
-<!-- 				<img src="images/page3-avatar.png" class="avatar ani" swiper-animate-effect="rotateIn" swiper-animate-duration="1.5s" swiper-animate-delay="2.6s">
-				<div class="word">
-					<img src="images/page3-name.png" class="ani" swiper-animate-effect="zoomInDown" swiper-animate-duration="1.5s" swiper-animate-delay="1s">
-					<img src="images/page3-para.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="0.5s">
-				</div> -->
-
 				<div class="avatar">
 					<img src="images/page3-avatar1.jpg">
 					<img src="images/page3-avatar3.png">
@@ -67,7 +57,8 @@
 					<img src="images/arrow.png">
 				</div>
 			</div>
-<!-- 			<div class="swiper-slide slide4">
+
+			<div class="swiper-slide slide4">
 				<img src="images/page4-avatar.png" class="avatar ani" swiper-animate-effect="rotateIn" swiper-animate-duration="1.5s" swiper-animate-delay="2.6s">
 				<div class="word">
 					<img src="images/page4-name.png" class="ani" swiper-animate-effect="zoomInDown" swiper-animate-duration="1.5s" swiper-animate-delay="1s">
@@ -76,7 +67,8 @@
 				<div class="u-arrow-bottom">
 					<img src="images/arrow.png">
 				</div>
-			</div> -->
+			</div>
+
 			<div class="swiper-slide slide5">
 				<div class="wordwrap">
 					<img src="images/page5-title.png" class="ani" swiper-animate-effect="zoomIn" swiper-animate-duration="1.5s" swiper-animate-delay="0.3s">
