--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     		},
     		onSlideChangeStart: function(swiper){
     			$('.p2-word2').removeClass('fadeOut');
-    			$('.avatar img').css('top', '0');
+    			$('.avatar').css('top', '0');
     			$('.p3-bg').css('opacity', '0');
     			$('.avatar').hide();
     		}
