--- a/index.html
+++ b/index.html
@@ -51,24 +51,24 @@
 				<img src="images/page3-bg.png" class="p3-bg">
 				<img src="images/page3-name.png" class="p3-name ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1.5s" swiper-animate-delay="3s">
 				<img src="images/page3-para.png" class="p3-para ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1.5s" swiper-animate-delay="3.8s">
-				<!-- <img src="images/page3-name.png" class="test"> -->
 				<div class="u-arrow-bottom">
 					<img src="images/arrow.png">
 				</div>
 			</div>
 
 			<div class="swiper-slide slide4">
-				<img src="images/page4-avatar.png" class="avatar ani" swiper-animate-effect="rotateIn" swiper-animate-duration="1.5s" swiper-animate-delay="2.6s">
+				<img src="images/page4-bg.png" class="p4-bg ani" swiper-animate-effect="fadeIn" swiper-animate-duration="1.5s" swiper-animate-delay="0.3s">
+				<img src="images/page4-bg2.jpg" class="p4-bg2 ani" swiper-animate-effect="fadeIn" swiper-animate-duration="1.5s" swiper-animate-delay="1.8s">
 				<div class="word">
-					<img src="images/page4-name.png" class="ani" swiper-animate-effect="zoomInDown" swiper-animate-duration="1.5s" swiper-animate-delay="1s">
-					<img src="images/page4-para.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="0.5s">
+					<img src="images/page4-name.png" class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1.5s" swiper-animate-delay="3.3s">
+					<img src="images/page4-para.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1.5s" swiper-animate-delay="4.8s">
 				</div>
 				<div class="u-arrow-bottom">
 					<img src="images/arrow.png">
 				</div>
 			</div>
 
-<!-- 			<div class="swiper-slide slide5">
+			<div class="swiper-slide slide5">
 				<div class="wordwrap">
 					<img src="images/page5-title.png" class="ani" swiper-animate-effect="zoomIn" swiper-animate-duration="1.5s" swiper-animate-delay="0.3s">
 					<img src="images/page5-para1.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="1.6s">
@@ -78,14 +78,22 @@
 				<div class="u-arrow-bottom">
 					<img src="images/arrow.png">
 				</div>
-			</div> -->
-<!-- 			<div class="swiper-slide slide6">
-				<div>
+			</div>
+			<div class="swiper-slide slide6">
+				<div class="title">
+					<img src="images/page6-title.png">
+					<img src="images/page6-title2.png">
+				</div>
+				<div class="para">
 					<img src="images/page6-para1.png" class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="0.3s">
 					<img src="images/page6-para2.png" class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="1.1s">
 					<img src="images/page6-para3.png" class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.9s">
 				</div>
-			</div> -->
+				<div class="footer">
+					<a href="wwww.la-chance.net"><img src="images/logo.png"></a>
+					<p>wwww.la-chance.net</p>
+				</div>
+			</div>
 		</div>
 
 
