--- a/index.html
+++ b/index.html
@@ -123,13 +123,11 @@
 
     			if (swiper.activeIndex == 2) {
     				setTimeout(function(){
-    					$('.avatar').show(800, function() {
-    						setTimeout(function(){
-    							$('.avatar:eq(2)').animate({'top':'28%'}, 1000);
-    							$('.avatar:eq(1)').animate({'top':'51%'}, 1000);
-    						},810)
-    					});
-
+    					$('.avatar').animate({opacity: 1}, 800);
+    					setTimeout(function(){
+    						$('.avatar:eq(2)').animate({'top':'28%'}, 800);
+    						$('.avatar:eq(1)').animate({'top':'51%'}, 800);
+    					},800)
     				},1000)
     				setTimeout(function(){
     					$('.p3-bg').animate({opacity: '0.7'}, 700);
@@ -141,9 +139,9 @@
     		},
     		onSlideChangeStart: function(swiper){
     			$('.p2-word2').removeClass('fadeOut');
-    			$('.avatar').css('top', '3%');
+    			$('.avatar').css('top', '6%');
     			$('.p3-bg').css('opacity', '0');
-    			$('.avatar').hide();
+    			$('.avatar').css('opacity', '0');
     		}
     	}) 
 }       
