--- a/index.html
+++ b/index.html
@@ -44,17 +44,7 @@
 				</div>
 			</div>
 
-			<div class="swiper-slide slide3">
-				<img src="images/page3-avatar1.jpg" class="avatar">
-				<img src="images/page3-avatar3.png" class="avatar">
-				<img src="images/page3-avatar2.png" class="avatar">
-				<img src="images/page3-bg.png" class="p3-bg">
-				<img src="images/page3-name.png" class="p3-name ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1.5s" swiper-animate-delay="3s">
-				<img src="images/page3-para.png" class="p3-para ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1.5s" swiper-animate-delay="3.8s">
-				<div class="u-arrow-bottom">
-					<img src="images/arrow.png">
-				</div>
-			</div>
+
 
 			<div class="swiper-slide slide4">
 				<img src="images/page4-bg.png" class="p4-bg ani" swiper-animate-effect="fadeIn" swiper-animate-duration="1.5s" swiper-animate-delay="0.3s">
@@ -63,6 +53,18 @@
 					<img src="images/page4-name.png" class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1.5s" swiper-animate-delay="3.3s">
 					<img src="images/page4-para.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1.5s" swiper-animate-delay="4.8s">
 				</div>
+				<div class="u-arrow-bottom">
+					<img src="images/arrow.png">
+				</div>
+			</div>
+
+			<div class="swiper-slide slide3">
+				<img src="images/page3-avatar1.jpg" class="avatar">
+				<img src="images/page3-avatar3.png" class="avatar">
+				<img src="images/page3-avatar2.png" class="avatar">
+				<img src="images/page3-bg.png" class="p3-bg">
+				<img src="images/page3-name.png" class="p3-name ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1.5s" swiper-animate-delay="3s">
+				<img src="images/page3-para.png" class="p3-para ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1.5s" swiper-animate-delay="3.8s">
 				<div class="u-arrow-bottom">
 					<img src="images/arrow.png">
 				</div>
@@ -80,16 +82,14 @@
 				</div>
 			</div>
 			<div class="swiper-slide slide6">
-				<div class="title">
-					<img src="images/page6-title.png">
-					<img src="images/page6-title2.png">
-				</div>
+				<img src="images/page6-title.png" class="t1">
+				<img src="images/page6-title2.png" class="t2 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="1.2s">
 				<div class="para">
-					<img src="images/page6-para1.png" class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="0.3s">
-					<img src="images/page6-para2.png" class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="1.1s">
-					<img src="images/page6-para3.png" class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.9s">
+					<img src="images/page6-para1.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="2.2s">
+					<img src="images/page6-para2.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="3s">
+					<img src="images/page6-para3.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="3.8s">
 				</div>
-				<div class="footer">
+				<div class="footer ani" swiper-animate-effect="zoomIn" swiper-animate-duration="1s" swiper-animate-delay="4.8s">
 					<a href="wwww.la-chance.net"><img src="images/logo.png"></a>
 					<p>wwww.la-chance.net</p>
 				</div>
@@ -121,7 +121,7 @@
     				},3000)
     			}
 
-    			if (swiper.activeIndex == 2) {
+    			if (swiper.activeIndex == 3) {
     				setTimeout(function(){
     					$('.avatar').animate({opacity: 1}, 800);
     					setTimeout(function(){
@@ -136,12 +136,19 @@
     			swiperAnimate(swiper); //每个slide切换结束时也运行当前slide动画
 
 
+    			if (swiper.activeIndex == 5) {
+    				setTimeout(function(){
+    					$('.t1').animate({'top': '17%'}, 800);
+    				},300)
+    			}
+
     		},
     		onSlideChangeStart: function(swiper){
     			$('.p2-word2').removeClass('fadeOut');
     			$('.avatar').css('top', '6%');
     			$('.p3-bg').css('opacity', '0');
     			$('.avatar').css('opacity', '0');
+    			$('t1').css('top', '40%');
     		}
     	}) 
 }       
