--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 					</div>
 					<div class="bg2">
 						<img src="images/page2-bg2.jpg">
-						<img src="images/page2-words2.png" class="p2-word2 ani" swiper-animate-effect="fadeIn" swiper-animate-duration="1s" swiper-animate-delay="2s">
-						<img src="images/page2-words3.png" class="p2-word3 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1.5s" swiper-animate-delay="3.8s">
+						<img src="images/page2-words2.png" class="p2-word2 ani" swiper-animate-effect="fadeIn" swiper-animate-duration="1s" swiper-animate-delay="1.6s">
+						<img src="images/page2-words3.png" class="p2-word3 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="3.2s">
 					</div>
 
 				</div>
@@ -47,11 +47,11 @@
 
 
 			<div class="swiper-slide slide4">
-				<img src="images/page4-bg.png" class="p4-bg ani" swiper-animate-effect="fadeIn" swiper-animate-duration="1.5s" swiper-animate-delay="0.3s">
-				<img src="images/page4-bg2.jpg" class="p4-bg2 ani" swiper-animate-effect="fadeIn" swiper-animate-duration="1.5s" swiper-animate-delay="1.8s">
+				<img src="images/page4-bg.png" class="p4-bg ani" swiper-animate-effect="fadeIn" swiper-animate-duration="1.8s" swiper-animate-delay="1.1s">
+				<img src="images/page4-bg2.jpg" class="p4-bg2 ani" swiper-animate-effect="fadeIn" swiper-animate-duration="1.5s" swiper-animate-delay="0.3s">
 				<div class="word">
-					<img src="images/page4-name.png" class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1.5s" swiper-animate-delay="3.3s">
-					<img src="images/page4-para.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1.5s" swiper-animate-delay="4.8s">
+					<img src="images/page4-name.png" class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1.2s" swiper-animate-delay="2s">
+					<img src="images/page4-para.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1.2s" swiper-animate-delay="2.6s">
 				</div>
 				<div class="u-arrow-bottom">
 					<img src="images/arrow.png">
@@ -63,8 +63,8 @@
 				<img src="images/page3-avatar3.png" class="avatar">
 				<img src="images/page3-avatar2.png" class="avatar">
 				<img src="images/page3-bg.png" class="p3-bg">
-				<img src="images/page3-name.png" class="p3-name ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1.5s" swiper-animate-delay="3s">
-				<img src="images/page3-para.png" class="p3-para ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1.5s" swiper-animate-delay="3.8s">
+				<img src="images/page3-name.png" class="p3-name ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1.2s" swiper-animate-delay="2.5s">
+				<img src="images/page3-para.png" class="p3-para ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1.5s" swiper-animate-delay="3.2s">
 				<div class="u-arrow-bottom">
 					<img src="images/arrow.png">
 				</div>
@@ -83,13 +83,13 @@
 			</div>
 			<div class="swiper-slide slide6">
 				<img src="images/page6-title.png" class="t1">
-				<img src="images/page6-title2.png" class="t2 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="1.2s">
+				<img src="images/page6-title2.png" class="t2 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="1.9s">
 				<div class="para">
-					<img src="images/page6-para1.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="2.2s">
-					<img src="images/page6-para2.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="3s">
-					<img src="images/page6-para3.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="3.8s">
+					<img src="images/page6-para1.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="2.7s">
+					<img src="images/page6-para2.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="3.5s">
+					<img src="images/page6-para3.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="4.3s">
 				</div>
-				<div class="footer ani" swiper-animate-effect="zoomIn" swiper-animate-duration="1s" swiper-animate-delay="4.8s">
+				<div class="footer ani" swiper-animate-effect="zoomIn" swiper-animate-duration="1s" swiper-animate-delay="5.3s">
 					<a href="wwww.la-chance.net"><img src="images/logo.png"></a>
 					<p>wwww.la-chance.net</p>
 				</div>
@@ -117,8 +117,8 @@
     			if (swiper.activeIndex == 1) {
     				setTimeout(function(){
 
-    					$('.p2-word2').attr('style', 'animation-duration:1s;-webkit-animation-duration:1s;animation-delay: 0.3s;-webkit-animation-delay: 0.3s;').addClass('fadeOut');
-    				},3000)
+    					$('.p2-word2').attr('style', 'animation-duration:1s;-webkit-animation-duration:1s;animation-delay: 0.1s;-webkit-animation-delay: 0.1s;').addClass('fadeOut');
+    				},2400)
     			}
 
     			if (swiper.activeIndex == 3) {
@@ -128,18 +128,21 @@
     						$('.avatar:eq(2)').animate({'top':'28%'}, 800);
     						$('.avatar:eq(1)').animate({'top':'51%'}, 800);
     					},800)
-    				},1000)
+    				},100)
     				setTimeout(function(){
     					$('.p3-bg').animate({opacity: '0.7'}, 700);
-    				},300)
+    				},1700)
     			}
     			swiperAnimate(swiper); //每个slide切换结束时也运行当前slide动画
 
 
     			if (swiper.activeIndex == 5) {
     				setTimeout(function(){
+    					$('.t1').animate({'opacity': '1'}, 800)
+    				},200)
+    				setTimeout(function(){
     					$('.t1').animate({'top': '17%'}, 800);
-    				},300)
+    				},1000)
     			}
 
     		},
@@ -148,7 +151,7 @@
     			$('.avatar').css('top', '6%');
     			$('.p3-bg').css('opacity', '0');
     			$('.avatar').css('opacity', '0');
-    			$('t1').css('top', '40%');
+    			$('.t1').css({'top':'45%','opacity':'0'});
     		}
     	}) 
 }       
